[gd_scene load_steps=2 format=2]

[ext_resource path="res://scenes/MainMenuScreen.gd" type="Script" id=1]

[node name="MainMenuScreen" type="Node2D"]
script = ExtResource( 1 )

[node name="CenterContainer" type="CenterContainer" parent="."]
margin_right = 1914.0
margin_bottom = 1082.0

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer"]
margin_left = 902.0
margin_top = 406.0
margin_right = 1122.0
margin_bottom = 806.0
rect_pivot_offset = Vector2( -1366, -252 )

[node name="VBoxContainer2" type="VBoxContainer" parent="CenterContainer/MarginContainer"]
margin_right = 220.0
margin_bottom = 400.0
grow_horizontal = 2
grow_vertical = 2
custom_constants/separation = 130

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/MarginContainer/VBoxContainer2"]
margin_right = 220.0
margin_bottom = 160.0
custom_constants/separation = 80
alignment = 1

[node name="Start Game" type="Button" parent="CenterContainer/MarginContainer/VBoxContainer2/VBoxContainer"]
margin_top = 20.0
margin_right = 110.0
margin_bottom = 40.0
rect_scale = Vector2( 2, 2 )
custom_colors/font_color_focus = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0, 1, 0.298039, 1 )
custom_colors/font_color_pressed = Color( 0, 1, 0.298039, 1 )
text = "Start Game"

[node name="Settings" type="Button" parent="CenterContainer/MarginContainer/VBoxContainer2/VBoxContainer"]
margin_top = 120.0
margin_right = 110.0
margin_bottom = 140.0
rect_scale = Vector2( 2, 2 )
custom_colors/font_color_focus = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0, 1, 0.298039, 1 )
custom_colors/font_color_pressed = Color( 0, 1, 0.298039, 1 )
text = "Settings"

[node name="Exit to Desktop" type="Button" parent="CenterContainer/MarginContainer/VBoxContainer2"]
margin_top = 250.0
margin_right = 110.0
margin_bottom = 270.0
rect_scale = Vector2( 2, 2 )
custom_colors/font_color_focus = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0, 1, 0.298039, 1 )
custom_colors/font_color_pressed = Color( 0, 1, 0.298039, 1 )
text = "Exit to Desktop"

[connection signal="pressed" from="CenterContainer/MarginContainer/VBoxContainer2/VBoxContainer/Start Game" to="." method="_on_Start_Game_pressed"]
[connection signal="pressed" from="CenterContainer/MarginContainer/VBoxContainer2/VBoxContainer/Settings" to="." method="_on_Settings_pressed"]
[connection signal="pressed" from="CenterContainer/MarginContainer/VBoxContainer2/Exit to Desktop" to="." method="_on_Exit_to_Desktop_pressed"]
